Fix quiz randomizer